--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -1,11 +1,11 @@
 FROM php:7.4-apache
 
+# Use own host name
+ENV HOST_NAME=rabacsacmstest3
+
 # run.sh script drop in docker
 ADD run.sh /run.sh
 RUN chmod 755 /*.sh
 
-RUN a2enmod rewrite ssl
-RUN mkdir /etc/apache2/sites-available/ssl
-
-# launch
-CMD ["/run.sh"]
+# Launch
+CMD ["/run.sh","--hostParam=${HOST_NAME}"]
