--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -5,4 +5,4 @@ ADD run.sh /run.sh
 RUN chmod 755 /*.sh
 
 # Launch USE OWN HOST NAME FOR FIRST PARAMETER!
-CMD ["/run.sh","rabacsacmstest3"]
+CMD ["/run.sh","YOUR_HOST_NAME"]
